--- a/challenge4/package.json
+++ b/challenge4/package.json
@@ -22,5 +22,9 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "react-bootstrap": "^2.2.3",
+        "react-router-dom": "^6.3.0"
     }
 }
