--- a/challenge4/package.json
+++ b/challenge4/package.json
@@ -20,11 +20,13 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.32.11",
+        "sass": "^1.50.0",
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "css": "^3.0.0",
         "react-bootstrap": "^2.2.3",
-        "react-router-dom": "^6.3.0"
+        "react-router-dom": "^6.3.0",
+        "react-widgets": "^5.8.4"
     }
 }
