--- a/challenge4/package.json
+++ b/challenge4/package.json
@@ -25,6 +25,8 @@
     },
     "dependencies": {
         "css": "^3.0.0",
+        "dotenv": "^16.0.0",
+        "mix-env-file": "^0.1.1",
         "react-bootstrap": "^2.2.3",
         "react-router-dom": "^6.3.0",
         "react-widgets": "^5.8.4"
