--- a/challenge4/package.json
+++ b/challenge4/package.json
@@ -10,9 +10,27 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.13.13",
+        "@popperjs/core": "^2.10.2",
         "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
+        "bootstrap": "^5.1.3",
+        "laravel-mix": "^6.0.0-beta.17",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.50.0",
+        "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@heroicons/react": "^1.0.6",
+        "css": "^3.0.0",
+        "dotenv": "^16.0.0",
+        "mix-env-file": "^0.1.1",
+        "react-bootstrap": "^2.2.3",
+        "react-router-dom": "^6.3.0",
+        "react-toast": "^1.0.3",
+        "react-widgets": "^5.8.4"
     }
 }
